--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -75,3 +75,8 @@ audio-sqa:
 transcript-sqa:
   evals:
     - transcript-sqa-web-questions
+
+audio-voicebench:
+  evals:
+    - audio-voicebench-alpaca.validation.v1
+    - audio-voicebench-wildvoices.validation.v1
