--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ dependencies = [
     "anthropic",
     "backoff",
     "beartype>=0.12.0",
-    "huggingface_hub", #0.30.2
-    "datasets", #2.19.1
+    "huggingface_hub",
+    "datasets",
     "blobfile",
     "chess",
     "dacite",
