--- a/evals/registry/solvers/whisper.yaml
+++ b/evals/registry/solvers/whisper.yaml
@@ -3,6 +3,34 @@
 # text transcript to the downstream solver. The Whisper solver can be used with
 # any solver that accepts text input.
 
+generation/whisper:
+  class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
+  args:
+    model: whisper-1
+  
+generation/openai/gpt-4o-transcribe:
+  class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
+  args:
+    model: gpt-4o-transcribe
+
+generation/openai/gpt-4o-mini-transcribe:
+  class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
+  args:
+    model: gpt-4o-mini-transcribe
+
+generation/openai/gpt-4o-transcribe-en:
+  class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
+  args:
+    model: gpt-4o-transcribe
+    language: en
+
+generation/openai/gpt-4o-mini-transcribe-en:
+  class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
+  args:
+    model: gpt-4o-mini-transcribe
+    language: en
+    
+
 generation/whisper/fireworks-llama-33-70b-instruct: 
   class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
   args:
