--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,10 @@ dependencies = [
     "transformers[torch]",
     "peft",
     "librosa",
+    "whisper-normalizer>=0.1.0",
+    "deepgram-sdk>=3.10.0",
+    "evaluate>=0.4.3",
+    "elevenlabs>=1.52.0",
 ]
 
 [project.urls]
@@ -73,3 +77,7 @@ packages = ["evals"]
 # Allow lines to be as long as 767 characters, this is currently the longest line
 # TODO: This should be brought down in the future
 line-length = 767
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
