--- a/evals/registry/solvers/whisper.yaml
+++ b/evals/registry/solvers/whisper.yaml
@@ -7,6 +7,13 @@ generation/whisper:
   class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
   args:
     model: whisper-1
+
+generation/whisper-large-v3:
+  class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
+  args:
+    base_url: https://api.deepinfra.com/v1/openai
+    model: openai/whisper-large-v3
+    api_key_env_var: DEEPINFRA_API_KEY
   
 generation/openai/gpt-4o-transcribe:
   class: evals.solvers.providers.openai.whisper_solver:OpenAITranscriptionSolver
