--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "evals"
 version = "3.0.1.post1"
-requires-python = ">=3.9"
+requires-python = ">=3.12,<3.13"
 readme = "README.md"
 dependencies = [
     "aiolimiter",
@@ -11,7 +11,7 @@ dependencies = [
     "blobfile",
     "chess",
     "dacite",
-    "datasets",
+    "datasets (==3.5.0)",
     "docker",
     "evaluate",
     "filelock",
